sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
	while(swapped=true)
                     ^